<resources>
    <string name="app_name">RxJavaPlusRoom</string>
    <string name="student_name">Student Name</string>
    <string name="student_age">Student Age</string>
    <string name="student_subject">Student Subject</string>
    <string name="btn_save">Save</string>
    <string name="add_student_cd">Add Student</string>
    <string name="id_placeholder"><![CDATA[<id>]]></string>
    <string name="name_placeholder"><![CDATA[<name>]]></string>
    <string name="age_placeholder"><![CDATA[<age>]]></string>
    <string name="subject_placeholder"><![CDATA[<subject>]]></string>
    <string name="btn_edit_text">Edit</string>
    <string name="btn_delete_text">Delete</string>
    <string name="delete_student_confirmation_text">You Sure !!</string>
    <string name="search_menu_string">Search</string>
</resources>